# Parallel-Conway-s-Game-of-Life

./: CMakeLists.txt  README.md
golMPI/: main.c
golSequential/: main.c
input/: t1.in
util/: dish.c  dish.h  golInput.c  golInput.h
